test/sema/compile-time-out-of-bounds-array-index-mutable-variable.delta
// RUN: not %delta -typecheck %s | %FileCheck %s
// XFAIL: *

extern def foo(): int[5]*;

def main() {
    var p = foo();
    var i: uint = 5;
    // CHECK: [[@LINE+1]]:15: error: accessing array out-of-bounds with index 5, array size is 5
    var e = p[i];
}
